--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -33,7 +33,6 @@
               <table class="table table-hover tm-table-small tm-product-table">
                 <thead>
                   <tr>
-                    <th scope="col">&nbsp;</th>
                     <th scope="col">项目名称</th>
                     <th scope="col">负责人</th>
                     <th scope="col">创建时间</th>
@@ -44,16 +43,16 @@
                 </thead>
                 <tbody>
                   <tr th:each="item : ${list}">
-                    <th scope="row"><input type="checkbox" /></th>
                     <td class="" th:id="${item.id}"><a th:href="@{toproject_xq(id=${item.id})}" style="color: white;" th:text="${item.pname}"></a></td>
                     <td th:text="${item.use.uname}"></td>
                     <td th:text="${#dates.format(item.createtime, 'yyyy-MM-dd HH-mm-ss')}"></td>
-                    <td th:if="${item.pstatus eq '0'}">开放</td>
-                    <td th:if="${item.pstatus eq '1'}">维修</td>
+                    <td th:if="${item.pstatus eq '1'}">开放</td>
+                    <td th:if="${item.pstatus eq '0'}">维修</td>
                     <td th:if="${item.pstatus eq '2'}">检测</td>
                     <td>
-                      <a href="#" class="tm-product-delete-link">
-                        <i class="far fa-trash-alt tm-product-delete-icon"></i>
+                      <a href="javascript:void(0)" onclick="sc(this)" th:id="${item.id}" class="tm-product-delete-link" >
+                      	
+                        <i class="far fa-trash-alt tm-product-delete-icon delete"></i>
                       </a>
                       
                       <a href="javascript:void(0)" style="font-size: 12px;color:white;" onclick="look_jd(this)">基地→</a>
@@ -70,9 +69,6 @@
             <a
               th:href="@{toinsert}"
               class="btn btn-primary btn-block text-uppercase mb-3">新增项目</a>
-            <button class="btn btn-primary btn-block text-uppercase">
-            	删除项目
-            </button>
           </div>
           
         </div>
@@ -97,6 +93,11 @@
         $(".tm-product-name").on("click", function() {
           window.location.href = "edit-product.html";
         });
+        
+        $("[name=delete_project]").click(function(){
+        	var id=$(this).attr(id);
+        	
+        })
       });
       
       function look_jd(th){
@@ -127,7 +128,14 @@
 	      			
 	      		} 
 	      	})
-    } 
+    }
+      
+      function sc(th){
+  	    var id=$(th).attr("id");
+  	    if(confirm("确定要删除吗？")){
+  	     	location.href="project_delete?id="+id;
+  		}
+  	 }
     </script>
   </body>
 </html>
