--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -338,6 +338,7 @@
 						dataType:"text",
 						success:function(result){
 							alert(result);
+							window.location.href="toquerymenu1";
 						}
 					})
 				})
