--- a/src/main/resources/templates/GoodContact.html
+++ b/src/main/resources/templates/GoodContact.html
@@ -45,12 +45,10 @@
                     	套餐名称
                     </th>
                     <th scope="col">套餐价格</th>
-                     <th scope="col">套餐库存</th>
                     <th scope="col">套餐详情</th>
                    
                     <th scope="col">状态</th>
                     <th scope="col">点赞</th>
-                    <th scope="col">&nbsp;</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -58,19 +56,13 @@
                     <td><img th:if="${item.image!=null}" th:src="${item.image.url}" width="65px" height="65px"/></td>
                     <td class="tm-product-name"><a th:href="@{/bing/toupdatebing(id=${item.id})}" th:text="${item.mname}"></a></td>
                     <td th:text="${item.price}"></td>
-                    <td th:text="${item.stock}"></td>
+                    <td th:text="${item.stock}" style="display: none;"></td>
                     <td>
                     	<p th:each="items,state1 : ${item.list}" th:text="${items.mname}+'('+${items.mename}+')'"></p>
                     </td>
                     <td><a class="sj" href="JavaScript:void(0)" th:if="${item.state=='1'}" th:text="上架" ></a><a class="xj"  href="JavaScript:void(0)"  th:if="${item.state=='2'}" th:text="下架" style="color: red;"></a></td>
                     <td style="display: none;" th:text="${item.id}"></td>
                     <td th:text="${item.likecount}"></td>
-                    <td>
-                      <a href="JavaScript:void(0)" class="tm-product-delete-link">
-                      	<input type="hidden" th:value="${item.id}">
-                        <i class="sc far fa-trash-alt tm-product-delete-icon"></i>
-                      </a>
-                    </td>
                   </tr>
                    
                 </tbody>
